apps/ghost/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghost
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`me.ramoneees.com`)
      kind: Rule
      services:
        - name: ghost
          port: 2368
  tls:
    secretName: wildcard-ramoneees-com-tls
